# KeyBERT

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  __init__.py  _highlight.py  _mmr.py  _model.py  changelog.html  faq.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml  test.py
.github/workflows/: testing.yml
api/: cohere.html  keybert.html  keyllm.html  langchain.html  litellm.html  maxsum.html  mmr.html  openai.html  textgeneration.html
backend/: _base.py  _sentencetransformers.py  _spacy.py
docs/: algorithm.md  changelog.md  faq.md  index.md
docs/api/: cohere.md  keybert.md  keyllm.md  langchain.md  litellm.md  maxsum.md  mmr.md  openai.md  textgeneration.md
docs/guides/: countvectorizer.md  embeddings.md  keyllm.md  llms.md  quickstart.md
docs/stylesheets/: extra.css
guides/: countvectorizer.html  embeddings.html  keyllm.html  llms.html  quickstart.html
keybert/: __init__.py  _highlight.py  _llm.py  _maxsum.py  _mmr.py  _model.py  _utils.py  maxsum.py  mmr.py  model.py
keybert/backend/: __init__.py  _base.py  _flair.py  _gensim.py  _hftransformers.py  _model2vec.py  _sentencetransformers.py  _spacy.py  _use.py  _utils.py
keybert/llm/: __init__.py  _base.py  _cohere.py  _langchain.py  _litellm.py  _openai.py  _textgeneration.py  _textgenerationinference.py  _utils.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_backend.py  test_model.py  utils.py
